--- a/.github/workflows/Docker-CI.yml
+++ b/.github/workflows/Docker-CI.yml
@@ -11,19 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 🧾 Checkout source code
+    - name: Checkout source code
       uses: actions/checkout@v3
 
-    - name: 🐋 Set up Docker Buildx
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: 🔐 Login to Docker Hub
+    - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: 📦 Build and push Docker image
+    - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
